# pyNeuroML

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  14.channel.nml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  install_local_java.sh  pynml-archive.1  pynml-channelanalysis.1  pynml-channelml2nml.1  pynml-modchananalysis.1  pynml-plotchan.1  pynml-plotmorph.1  pynml-plotspikes.1  pynml-plottimeseries.1  pynml-povray.1  pynml-sonata.1  pynml-summary.1  pynml-tune.1  pynml.1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-development.txt  requirements-experimental.txt  requirements.txt  setup.cfg  setup.py  test-ghactions.sh  test.sh  test3.sh
.agents/: 2026-04-22.md  2026-04-29.md  2026-05-12.md  Readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-py3.13.yml  ci.yml  python-publish.yml  ruff.yml
docs/: flat.spikes  noisy.spikes  pyneuroml.neuron.rst  requirements.txt  sines.spikes
docs/extras/: Readme.md  pyneuroml.neuron.analysis.rst
docs/source/: conf.py  index.rst  introduction.rst  modules.rst  pyneuroml.analysis.rst  pyneuroml.annotations.rst  pyneuroml.archive.rst  pyneuroml.channelml.rst  pyneuroml.io.rst  pyneuroml.lems.rst  pyneuroml.modelgraphs.rst  pyneuroml.neuron.rst  pyneuroml.nsgr.rst  pyneuroml.plot.rst  pyneuroml.povray.rst  pyneuroml.pynml.rst  pyneuroml.rst  pyneuroml.runners.rst  pyneuroml.sbml.rst  pyneuroml.swc.rst  pyneuroml.tune.rst  pyneuroml.utils.rst
examples/: IM.channel.nml  KConductance.channel.nml  KConductance.mod  Kd.channel.nml  LEMS_NML2_Ex5_DetCell.xml  LEMS_NML2_Ex9_FN.xml  LeakConductance.channel.nml  LeakConductance.mod  NML2_SingleCompHHCell.nml  NaConductance.channel.nml  NaConductance.mod  NaConductance2.mod  README.md  Vm_plot.py  analyseNaMod.sh  analyseNaNml2.sh  analyseNaNml2_iv.sh  command_execute_tests.py  component_evaluation.py  create_new_lems_file.py  dt_dependence.py  export_neuroml1.py  export_neuroml2.py  generate_if_curve.py  generate_povray.py  quick_plot.py  readAnnots.py  record_channel_currents.py  reload_data.py  run_jneuroml_plot_matplotlib.py  test.hoc  test_execute_command.py  tuneHHCell.py  tuneHHCell.sh  units.py
examples/results/: README.md
examples/test_data/: Ca_pyr.channel.nml  EGL-36.channel.nml  HHCellNetwork.net.nml  Kahp_pyr.channel.nml  Kdr_bask.channel.nml  Kdr_pyr.channel.nml  LEMS_HH_Simulation.xml  LeakConductance_bask.channel.nml  LeakConductance_pyr.channel.nml  NML2_FullCell.nml  NML2_SimpleIonChannel.nml  Na_bask.channel.nml  Na_pyr.channel.nml  TwoCell.net.nml  complex_cell.cell.nml  hhcell.cell.nml  kChan.channel.nml  naChan.channel.nml  passiveChan.channel.nml  realtime.py  simple_cell.cell.nml  simplenet.py  snooze.py  snooze.sh  valid_doc.sbml  valid_doc_sedml.sedml
examples/tune/: LEMS_OnePyr.xml  OnePyr.net.nml  README.md  tunePyr.py
man/man1/: README.md  common.h2m  generate-man-pages.sh  pynml-archive.1  pynml-channelanalysis.1  pynml-channelml2nml.1  pynml-modchananalysis.1  pynml-plotchan.1  pynml-plotmorph.1  pynml-plotspikes.1  pynml-plottimeseries.1  pynml-povray.1  pynml-sonata.1  pynml-summary.1  pynml-swc2nml.1  pynml-tune.1  pynml-xpp.1  pynml.1  version.h2m
pyneuroml/: __init__.py  annotations.py  biosimulations.py  errors.py  io.py  modelgraphs.py  nsgr.py  pynml.py  runners.py  utils.py  validators.py
pyneuroml/analysis/: ChannelDensityPlot.py  ChannelHelper.py  ChannelInfo_TEMPLATE.html  ChannelInfo_TEMPLATE.md  LEMS_Test_TEMPLATE.xml  NML2CellAnalysis.py  NML2ChannelAnalysis.py  __init__.py
pyneuroml/archive/: __init__.py
pyneuroml/channelml/: ChannelML2NeuroML2.xsl  ChannelML2NeuroML2beta.xsl  __init__.py
pyneuroml/lems/: LEMSSimulation.py  LEMS_TEMPLATE.xml  __init__.py
pyneuroml/morphologies/: CellBuilder.py  PlotMorphology.py
pyneuroml/neuron/: TEMPLATE.channel.nml  __init__.py  mview_neuroml1.hoc  mview_neuroml2.hoc  nrn_export_utils.py  utils.hoc
pyneuroml/nsgr/: __init__.py
pyneuroml/plot/: Connectivity.py  E_net.spikes.txt  I_net.spikes.txt  Plot.py  PlotMorphology.py  PlotMorphologyPlotly.py  PlotMorphologyVispy.py  PlotSpikes.py  PlotTimeSeries.py  __init__.py  example_izhikevich2007network_sim.0.spikes.dat.txt  example_izhikevich2007network_sim.1.spikes.dat.txt  generate_test_data.py  utils.py
pyneuroml/povray/: MakeMovie.py  NeuroML2ToPOVRay.py  OverlaySimulation.py
pyneuroml/sbml/: __init__.py  process_test_suite.py
pyneuroml/sedml/: __init__.py
pyneuroml/swc/: ExportNML.py  ExportSWC.py  LoadSWC.py  LoaderSWC.py  SWCLoad.py  SWCLoader.py  dCH-cobalt.CNG.nml
pyneuroml/tellurium/: __init__.py
pyneuroml/tune/: NeuroMLController.py  NeuroMLSimulation.py  NeuroMLTuner.py  __init__.py
pyneuroml/utils/: CellBuilder.py  __init__.py  cli.py  components.py  info.py  jnmlwrapper.py  misc.py  moose.py  nml2py.py  nwb.py  plot.py  recording.py  simdata.py  units.py  xml.py
pyneuroml/xppaut/: __init__.py
pynml/: pynml.py
scripts/: generate_test_data.py
test/: izhikevich_test_file.nml  test_pynml.py
tests/: HH_example_cell.nml  HH_example_k_channel.nml  HH_example_leak_channel.nml  HH_example_na_channel.nml  HH_example_net.nml  __init__.py  izhikevich_test_file.nml  test_annotations.py  test_biosimulations.py  test_cellbuilder.py  test_io.py  test_nsgr.py  test_pynml.py  test_runners.py
tests/analysis/: test_cell_analysis.py  test_channel_analysis.py  test_channel_density_plots.py
tests/archive/: test_archive.py
tests/channelml/: 14.channelml  DoubExpSyn.xml  NMDA.xml  NaChannel_HH.xml  SingleExpSyn.xml  __init__.py  test_channelml.py
tests/lems/: test_lems.py  test_lemssimulation.py
tests/neuron/: __init__.py  test_neuron_utils.py
tests/nsgr/: test_nsgr.py
tests/plot/: CaDynamics.nml  CaDynamics_all.nml  Ca_HVA.channel.nml  Ca_LVA.channel.nml  Cell_497232312.cell.nml  Ih.channel.nml  Im.channel.nml  Im_v2.channel.nml  Izh2007Cells.net.nml  K_P.channel.nml  K_T.channel.nml  Kd.channel.nml  Kv2like.channel.nml  Kv3_1.channel.nml  L23_PC_simplified.cell.nml  NaTa.channel.nml  (+13 more)
(+105 files in other folders)
