[metadata]
name = pyNeuroML
version = 1.0.9
author = Padraig Gleeson
author_email = p.gleeson@gmail.com
url = https://github.com/NeuroML/pyNeuroML
license = LGPL-3.0-only
description = Python utilities for NeuroML
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
install_requires =
    pylems>=0.5.7
    airspeed>=0.5.5
    neuromllite>=0.5.4
    libNeuroML>=0.5.1
    matplotlib
    matplotlib-scalebar
    graphviz
    typing; python_version<"3.5"
    lxml
    pandas

packages = find:

[options.packages.find]
where = .
include = pyneuroml*

[options.entry_points]
console_scripts =
    pynml                 = pyneuroml.pynml:main
    pynml-archive         = pyneuroml.archive:main
    pynml-channelanalysis = pyneuroml.analysis.NML2ChannelAnalysis:main
    pynml-modchananalysis = pyneuroml.neuron.analysis.HHanalyse:main
    pynml-povray          = pyneuroml.povray.NeuroML2ToPOVRay:main
    pynml-tune            = pyneuroml.tune.NeuroMLTuner:main
    pynml-summary         = pyneuroml.pynml:summary
    pynml-plotspikes      = pyneuroml.plot.PlotSpikes:main
    pynml-plotmorph       = pyneuroml.plot.PlotMorphology:main
    pynml-channelml2nml   = pyneuroml.channelml:main
    pynml-plotchan        = pyneuroml.analysis.ChannelDensityPlot:channel_density_plotter_cli
    pynml-sonata          = neuromllite.SonataReader:main

[options.package_data]
* =
        lib/*.jar
        *.xml
        *.html
        *.md
        *.xsl
        *.hoc

[options.extras_require]
neuron =
    NEURON
    pyyaml

brian =
    Brian2

netpyne =
    netpyne

povray =
    opencv-python

hdf5 =
    tables

analysis =
    pyelectro
    sympy

tune =
    neurotune>=0.2.6
    ppft

vispy =
    vispy
    pyqt5

plotly =
    plotly

all =
    pyNeuroML[neuron]
    pyNeuroML[brian]
    pyNeuroML[netpyne]
    pyNeuroML[netpyne]
    pyNeuroML[povray]
    pyNeuroML[hdf5]
    pyNeuroML[analysis]
    pyNeuroML[tune]
    pyNeuroML[vispy]
    pyNeuroML[plotly]

dev =
    pyNeuroML[all]
    airspeed>=0.5.5
    modelspec @ git+https://github.com/ModECI/modelspec.git@development#egg=modelspec
    libNeuroML @ git+https://github.com/NeuralEnsemble/libNeuroML.git@development#egg=libNeuroML
    pylems @ git+https://github.com/LEMS/pylems.git@development#egg=pylems
    pytest
    pytest-cov
    kaleido
    pre-commit

experimental =
    pyNeuroML[dev]

    modelspec @ git+https://github.com/ModECI/modelspec.git@development#egg=modelspec
    libNeuroML @ git+https://github.com/NeuralEnsemble/libNeuroML.git@development#egg=libNeuroML
    pylems @ git+https://github.com/LEMS/pylems.git@development#egg=pylems

doc =
    pyNeuroML[all]
    sphinxcontrib-bibtex
    pydata-sphinx-theme

[flake8]
ignore = E501, E502, F403, F405
