[metadata]
name = pyNeuroML
version = 1.2.11
author = Padraig Gleeson
author_email = p.gleeson@gmail.com
url = https://github.com/NeuroML/pyNeuroML
license = LGPL-3.0-only
description = Python utilities for NeuroML
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
install_requires =
    pylems>=0.6.4
    airspeed>=0.5.5
    neuromllite>=0.5.7
    libNeuroML>=0.5.5
    matplotlib
    matplotlib-scalebar
    graphviz
    typing; python_version<"3.5"
    lxml
    sympy
    ppft[dill]

packages = find:

[options.packages.find]
where = .
include = pyneuroml*

[options.entry_points]
console_scripts =
    pynml                 = pyneuroml.pynml:main
    pynml-archive         = pyneuroml.archive:main
    pynml-channelanalysis = pyneuroml.analysis.NML2ChannelAnalysis:main
    pynml-modchananalysis = pyneuroml.neuron.analysis.HHanalyse:main
    pynml-povray          = pyneuroml.povray.NeuroML2ToPOVRay:main
    pynml-tune            = pyneuroml.tune.NeuroMLTuner:main
    pynml-summary         = pyneuroml.utils.info:summary
    pynml-plotspikes      = pyneuroml.plot.PlotSpikes:main
    pynml-plotmorph       = pyneuroml.plot.PlotMorphology:main
    pynml-channelml2nml   = pyneuroml.channelml:main
    pynml-plotchan        = pyneuroml.analysis.ChannelDensityPlot:channel_density_plotter_cli
    pynml-plottimeseries  = pyneuroml.plot.PlotTimeSeries:_time_series_plotter_main
    pynml-sonata          = neuromllite.SonataReader:main
    pynml-xpp             = pyneuroml.xppaut:main

[options.package_data]
* =
        lib/*.jar
        *.xml
        *.html
        *.md
        *.xsl
        *.hoc
        TEMPLATE.channel.nml

[options.extras_require]
neuron =
    NEURON
    pyyaml

brian =
    Brian2

netpyne =
    netpyne

povray =
    opencv-python

hdf5 =
    tables

analysis =
    pyelectro
    sympy

tune =
    neurotune>=0.2.6

vispy-common =
    vispy>=0.13.0
    scipy
    pyopengl
    PyOpenGL-accelerate
    progressbar2

vispy-qt5 =
    pyNeuroML[vispy-common]
    pyqt5

# default is qt6
vispy =
    pyNeuroML[vispy-common]
    pyqt6

plotly =
    plotly


nsg =
    pynsgr

annotations =
    rdflib

combine =
    python-libsbml
    python-libsedml
    pyNeuroML[annotations]
    pydantic
    requests-toolbelt

tellurium =
    tellurium

all =
    pyNeuroML[neuron]
    pyNeuroML[brian]
    pyNeuroML[netpyne]
    pyNeuroML[netpyne]
    pyNeuroML[povray]
    pyNeuroML[hdf5]
    pyNeuroML[analysis]
    pyNeuroML[tune]
    pyNeuroML[vispy]
    pyNeuroML[plotly]
    pyNeuroML[nsg]
    pyNeuroML[annotations]
    pyNeuroML[combine]
    pyNeuroML[tellurium]

dev =
    pyNeuroML[all]
    airspeed>=0.5.5
    pytest
    pytest-cov
    kaleido
    pre-commit


doc =
    pyNeuroML[all]
    sphinxcontrib-bibtex
    pydata-sphinx-theme
